[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/Sprites/Level02.png" type="Texture" id=1]
[ext_resource path="res://Scripts/LevelController.gd" type="Script" id=3]
[ext_resource path="res://Nodes/Levels/Perspectives.tscn" type="PackedScene" id=4]
[ext_resource path="res://Nodes/Obstacles/Flag.tscn" type="PackedScene" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 454.605, 5.50247 )

[node name="Level02" type="Node2D"]
script = ExtResource( 3 )
levelNumber = 2

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="DebugSprite" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.592157 )
position = Vector2( -0.5, 0 )

[node name="Perspectives" parent="." instance=ExtResource( 4 )]
visible = false
position = Vector2( 3.41077, -153.712 )

[node name="TopDown" type="Node2D" parent="."]
visible = false

[node name="Sandbox" type="StaticBody2D" parent="TopDown" groups=[
"TopDownMode",
]]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="TopDown/Sandbox"]
position = Vector2( -7.7782, -154.149 )
polygon = PoolVector2Array( -543.386, 265.351, -385.458, -161.422, 395.909, -161.422, 571.211, 270.84, -542.592, 266.542, -451.114, 207.191, -450.37, 207.558, 466.271, 206.047, 354.814, -77.7745, -348.821, -76.8574, -448.251, 205.439 )

[node name="Flag" parent="." instance=ExtResource( 5 )]
position = Vector2( 242.819, -191.816 )

[node name="SideScroller" type="Node2D" parent="."]

[node name="Plane6" type="StaticBody2D" parent="SideScroller" groups=[
"SideScrollerMode",
]]
position = Vector2( -8.32443, -152.219 )
collision_layer = 32768

[node name="CollisionShape2D" type="CollisionShape2D" parent="SideScroller/Plane6"]
position = Vector2( 4.40973, -54.8066 )
shape = SubResource( 1 )

[node name="Plane5" type="StaticBody2D" parent="SideScroller" groups=[
"SideScrollerMode",
]]
position = Vector2( -8.32443, -152.219 )
collision_layer = 16384

[node name="CollisionShape2D" type="CollisionShape2D" parent="SideScroller/Plane5"]
position = Vector2( 5.66968, -27.7183 )
shape = SubResource( 1 )

[node name="Plane4" type="StaticBody2D" parent="SideScroller" groups=[
"SideScrollerMode",
]]
position = Vector2( -8.32443, -152.219 )
collision_layer = 8192

[node name="CollisionShape2D" type="CollisionShape2D" parent="SideScroller/Plane4"]
position = Vector2( 4.40973, 3.14978 )
shape = SubResource( 1 )

[node name="Plane3" type="StaticBody2D" parent="SideScroller" groups=[
"SideScrollerMode",
]]
position = Vector2( -8.32443, -152.219 )
collision_layer = 4096

[node name="CollisionShape2D" type="CollisionShape2D" parent="SideScroller/Plane3"]
position = Vector2( 1.25989, 50.3969 )
shape = SubResource( 1 )

[node name="Plane2" type="StaticBody2D" parent="SideScroller" groups=[
"SideScrollerMode",
]]
position = Vector2( -8.32443, -152.219 )
collision_layer = 2048

[node name="CollisionShape2D" type="CollisionShape2D" parent="SideScroller/Plane2"]
position = Vector2( 5.66962, 106.463 )
shape = SubResource( 1 )

[node name="Plane1" type="StaticBody2D" parent="SideScroller" groups=[
"SideScrollerMode",
]]
position = Vector2( -8.32443, -152.219 )
collision_layer = 1024

[node name="CollisionShape2D" type="CollisionShape2D" parent="SideScroller/Plane1"]
position = Vector2( 10.0793, 169.459 )
shape = SubResource( 1 )

[node name="Obstacles" type="Node2D" parent="."]

[node name="Void" type="Area2D" parent="Obstacles" groups=[
"ObstacleVoid",
]]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Obstacles/Void"]
polygon = PoolVector2Array( 43.7321, -54.2331, 31.3848, 50.5518, 162.867, 51.2192, 150.519, -53.5657 )

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="Obstacles/Void"]
polygon = PoolVector2Array( 61.8196, -228.22, 54.4108, -155.681, 133.5, -155.681, 128.415, -228.22 )

[connection signal="body_entered" from="Obstacles/Void" to="." method="_on_Void_body_entered"]
